Fix projects title misalignment

--- a/src/components/projects/Project.module.scss
+++ b/src/components/projects/Project.module.scss
@@ -11,7 +11,7 @@
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 1.5rem;
-    flex: none;
+    width: 100%;
   }
 
   .row {
@@ -115,7 +115,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 34px 0px;
     }
   }
 }
